--- a/TravelTool/View/Base.lproj/Main.storyboard
+++ b/TravelTool/View/Base.lproj/Main.storyboard
@@ -40,21 +40,13 @@
             <objects>
                 <viewController title="FCViewController" id="uMT-A3-F60" userLabel="LiveMessageViewController" customClass="LiveMessageViewController" customModule="TravelTool" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="zVi-WV-JbB"/>
-                        <viewControllerLayoutGuide type="bottom" id="TGR-S7-FKO"/>
+                        <viewControllerLayoutGuide type="top" id="mK3-b9-AgP"/>
+                        <viewControllerLayoutGuide type="bottom" id="kVs-Rq-zWm"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="4Dk-Kp-xdq" userLabel="Root">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <visualEffectView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="soz-qM-lu1" userLabel="Background Blur">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="qh4-Oq-lbs">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                </view>
-                                <blurEffect style="light"/>
-                            </visualEffectView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VRr-Ou-qfp" userLabel="Header">
                                 <rect key="frame" x="0.0" y="88" width="414" height="40"/>
                                 <subviews>
@@ -158,6 +150,14 @@
                             <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gLD-jV-qSR">
                                 <rect key="frame" x="16" y="136" width="382" height="624"/>
                             </imageView>
+                            <visualEffectView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="soz-qM-lu1" userLabel="Background Blur">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="qh4-Oq-lbs">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="saZ-zf-ltO">
                                 <rect key="frame" x="152.5" y="575" width="109" height="30"/>
                                 <color key="backgroundColor" red="0.070588235294117646" green="0.52941176470588236" blue="0.87058823529411766" alpha="1" colorSpace="calibratedRGB"/>
@@ -182,20 +182,20 @@
                             <constraint firstAttribute="trailingMargin" secondItem="VRr-Ou-qfp" secondAttribute="trailing" constant="-20" id="7LE-0W-xWN"/>
                             <constraint firstItem="DHD-HU-kCB" firstAttribute="leading" secondItem="4Dk-Kp-xdq" secondAttribute="leadingMargin" constant="-4" id="8ff-Rm-C4p"/>
                             <constraint firstItem="gLD-jV-qSR" firstAttribute="top" secondItem="VRr-Ou-qfp" secondAttribute="bottom" constant="8" id="Bqo-a1-UsK"/>
-                            <constraint firstItem="TGR-S7-FKO" firstAttribute="top" secondItem="soz-qM-lu1" secondAttribute="bottom" id="FKL-SY-YPo"/>
+                            <constraint firstItem="kVs-Rq-zWm" firstAttribute="top" secondItem="soz-qM-lu1" secondAttribute="bottom" id="FKL-SY-YPo"/>
                             <constraint firstAttribute="trailingMargin" secondItem="soz-qM-lu1" secondAttribute="trailing" constant="-20" id="Fvo-HH-27I"/>
                             <constraint firstItem="gLD-jV-qSR" firstAttribute="centerX" secondItem="4Dk-Kp-xdq" secondAttribute="centerX" id="K02-4b-r5g"/>
                             <constraint firstItem="STK-FK-gn5" firstAttribute="centerY" secondItem="nhb-8J-WZ5" secondAttribute="centerY" id="MG1-Zi-pOg"/>
                             <constraint firstItem="STK-FK-gn5" firstAttribute="top" secondItem="DHD-HU-kCB" secondAttribute="bottom" constant="8" symbolic="YES" id="VzZ-Uw-ID6"/>
-                            <constraint firstItem="TGR-S7-FKO" firstAttribute="top" secondItem="wv1-bL-LxQ" secondAttribute="bottom" constant="16" id="bLt-MX-wY3"/>
+                            <constraint firstItem="kVs-Rq-zWm" firstAttribute="top" secondItem="wv1-bL-LxQ" secondAttribute="bottom" constant="16" id="bLt-MX-wY3"/>
                             <constraint firstItem="gLD-jV-qSR" firstAttribute="centerY" secondItem="4Dk-Kp-xdq" secondAttribute="centerY" id="c3y-Dd-Xq5"/>
                             <constraint firstItem="DHD-HU-kCB" firstAttribute="top" secondItem="VRr-Ou-qfp" secondAttribute="bottom" constant="8" id="der-Ny-LDv"/>
                             <constraint firstItem="soz-qM-lu1" firstAttribute="leading" secondItem="4Dk-Kp-xdq" secondAttribute="leadingMargin" constant="-20" id="e5v-1q-lbC"/>
                             <constraint firstItem="wv1-bL-LxQ" firstAttribute="leading" secondItem="STK-FK-gn5" secondAttribute="trailing" constant="8" symbolic="YES" id="e7L-dI-PkH"/>
                             <constraint firstItem="wv1-bL-LxQ" firstAttribute="trailing" secondItem="DHD-HU-kCB" secondAttribute="trailing" id="jLu-32-ERV"/>
                             <constraint firstItem="VRr-Ou-qfp" firstAttribute="leading" secondItem="4Dk-Kp-xdq" secondAttribute="leadingMargin" constant="-20" id="lXP-yU-4e8"/>
-                            <constraint firstItem="VRr-Ou-qfp" firstAttribute="top" secondItem="zVi-WV-JbB" secondAttribute="bottom" id="lgZ-Wt-SEn"/>
-                            <constraint firstItem="soz-qM-lu1" firstAttribute="top" secondItem="zVi-WV-JbB" secondAttribute="bottom" id="sdv-Dx-GGs"/>
+                            <constraint firstItem="VRr-Ou-qfp" firstAttribute="top" secondItem="mK3-b9-AgP" secondAttribute="bottom" id="lgZ-Wt-SEn"/>
+                            <constraint firstItem="soz-qM-lu1" firstAttribute="top" secondItem="mK3-b9-AgP" secondAttribute="bottom" id="sdv-Dx-GGs"/>
                             <constraint firstItem="STK-FK-gn5" firstAttribute="top" secondItem="wv1-bL-LxQ" secondAttribute="top" id="spZ-ka-Cxy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="DHD-HU-kCB" secondAttribute="trailing" constant="-4" id="xhU-Sl-tIr"/>
                             <constraint firstItem="saZ-zf-ltO" firstAttribute="centerX" secondItem="4Dk-Kp-xdq" secondAttribute="centerX" id="yFC-zL-99b"/>
@@ -274,15 +274,15 @@
             <objects>
                 <viewController storyboardIdentifier="MapViewController" id="sfw-kd-zDS" userLabel="Map View Controller" customClass="MapViewController" customModule="TravelTool" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1Eh-gx-8qc"/>
-                        <viewControllerLayoutGuide type="bottom" id="eZP-ta-Tg7"/>
+                        <viewControllerLayoutGuide type="top" id="HbD-Fa-Mhd"/>
+                        <viewControllerLayoutGuide type="bottom" id="wgp-la-Sxh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yRv-c2-pUl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="QJV-vF-gzA">
-                                <rect key="frame" x="0.0" y="88" width="414" height="723"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="724"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
                         </subviews>
@@ -305,8 +305,8 @@
             <objects>
                 <viewController storyboardIdentifier="DetailViewController" id="Zm8-hw-4hH" userLabel="Detail View Controller" customClass="DetailViewController" customModule="TravelTool" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="YZV-hV-2ks"/>
-                        <viewControllerLayoutGuide type="bottom" id="7gr-7b-LZ7"/>
+                        <viewControllerLayoutGuide type="top" id="iVb-O0-kRj"/>
+                        <viewControllerLayoutGuide type="bottom" id="X7T-Su-51n"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yNg-dA-kwA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -345,6 +345,13 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No Photo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1v-TW-sut" userLabel="No Photo">
+                                <rect key="frame" x="171" y="226" width="72" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -353,6 +360,8 @@
                         <outlet property="infoLabel" destination="TAP-zY-DWw" id="KnK-F4-gLB"/>
                         <outlet property="parkAddress" destination="zqc-aH-xSM" id="rGk-mf-4Ry"/>
                         <outlet property="parkHours" destination="MTi-XL-1Zk" id="dCk-Kf-9ae"/>
+                        <outlet property="photoLabel" destination="a1v-TW-sut" id="OVA-HO-DMM"/>
+                        <outlet property="publicFlickrLabel" destination="Ww1-2N-uiW" id="DHH-j5-nid"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hCQ-Gq-Wgg" userLabel="First Responder" sceneMemberID="firstResponder"/>
